Fix header animation jump

--- a/assets/index.css
+++ b/assets/index.css
@@ -20,6 +20,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-bottom: 1rem;
 }
 
 logo-wrapper {
@@ -68,7 +69,7 @@ contact-info {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -94,7 +95,9 @@ contact-info {
 
 .contact-info__icon {
   display:inline-block;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .contact-info__icon i.fa {
